--- a/style.css
+++ b/style.css
@@ -1,14 +1,24 @@
+.landing-img{
+    height: 45vw;
+    object-fit: cover;
+}
+
 .video-container{
+    box-shadow: inset 0 0.5em 1.5em rgba(0, 0, 0, .1), inset 0 0.125em 0.5em rgba(0, 0, 0, .15);
+}
+
+.video{
     display: grid;
     grid-template-areas: 
     "title"
     "video"
     "info";
     text-align: center;
-    margin-left: 8%;
-    margin-right: 8%;
-    margin-top: 4%;
-    margin-bottom: 4%;
+    padding-left: 8%;
+    padding-right: 8%;
+    padding-top: 4%;
+    padding-bottom: 4%;
+    border-radius: 20px;
 }
 
 #title{
@@ -16,7 +26,7 @@
     grid-area: title;
     background-color: lightgray;
     height: 70px;
-    border-radius: 7px 7px 0px 0px;
+    border-radius: 20px 20px 0px 0px;
 }
 
 #video{
@@ -31,4 +41,20 @@
     grid-area: info;
     background-color: lightgray;
     height: 70px;
+    border-radius: 0px 0px 20px 20px;
+}
+
+.bio-title{
+    margin: 2rem;
+    text-align: center;
+    font-size: 35px;
+}
+
+.bio-text{
+    margin: 2rem;
+    padding-bottom: 1rem;
+    text-align: center;
+    font-size: 18px;
+    padding-right: 9%;
+    padding-left: 9%;
 }
