--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 .landing-img{
     height: 45vw;
+    max-height: 700px;
+    min-height: 300px;
     object-fit: cover;
 }
 
@@ -8,40 +10,14 @@
 }
 
 .video{
-    display: grid;
-    grid-template-areas: 
-    "title"
-    "video"
-    "info";
+    padding: 3%;
     text-align: center;
-    padding-left: 8%;
-    padding-right: 8%;
-    padding-top: 4%;
-    padding-bottom: 4%;
-    border-radius: 20px;
 }
 
-#title{
-    margin: 0;
-    grid-area: title;
-    background-color: lightgray;
-    height: 70px;
-    border-radius: 20px 20px 0px 0px;
-}
-
-#video{
-    margin: 0;
-    grid-area: video;
-    background-color: gray;
-    height: 340px;
-}
-
-#info{
-    margin: 0;
-    grid-area: info;
-    background-color: lightgray;
-    height: 70px;
-    border-radius: 0px 0px 20px 20px;
+#youtube-video{
+    padding-top: 1%;
+    width: 70vw;
+    height: 42vw;
 }
 
 .bio-title{
@@ -51,12 +27,12 @@
 }
 
 .bio-text{
-    margin: 2rem;
-    padding-bottom: 1rem;
+    padding-bottom: 3rem;
     text-align: center;
     font-size: 18px;
-    padding-right: 9%;
-    padding-left: 9%;
+    width: 75%;
+    max-width: 1000px;
+    margin: auto;
 }
 
 .footer-container{
@@ -79,5 +55,25 @@
 }
 
 .footer-text{
+    color: black;
     margin: 0;
+    transition: color .2s;
+}
+
+.footer-text-link{
+    color: black;
+    margin: 0;
+    transition: color .2s;
+}
+
+.footer-text-link:link {
+    text-decoration: none;
+}
+
+.footer-text-link:visited {
+    text-decoration: none;
+}
+
+.footer-text-link:hover {
+    color: gray;
 }
