--- a/style.css
+++ b/style.css
@@ -5,21 +5,6 @@
     object-fit: cover;
 }
 
-.video-container{
-    box-shadow: inset 0 0.5em 1.5em rgba(0, 0, 0, .1), inset 0 0.125em 0.5em rgba(0, 0, 0, .15);
-}
-
-.video{
-    padding: 3%;
-    text-align: center;
-}
-
-#youtube-video{
-    padding-top: 1%;
-    width: 70vw;
-    height: 42vw;
-}
-
 .bio-title{
     margin: 2rem;
     text-align: center;
@@ -33,6 +18,43 @@
     width: 75%;
     max-width: 1000px;
     margin: auto;
+}
+
+.video-container{
+    box-shadow: inset 0 0.5em 1.5em rgba(0, 0, 0, .1), inset 0 0.125em 0.5em rgba(0, 0, 0, .15);
+}
+
+.video{
+    padding: 3%;
+    padding-bottom: 0;
+    text-align: center;
+}
+
+#youtube-video{
+    padding-top: 1%;
+    width: 70vw;
+    height: 42vw;
+}
+
+.explore-button-container{
+    text-align: center;
+    height: 120px;
+}
+
+.explore-button{
+    all: unset;
+    position: relative;
+    top: 38%;
+    border-radius: 7px;
+    font-size: 18px;
+    padding: 10px 20px;
+    background-color: rgb(11,110,253);
+    color: white; 
+    transition: background-color 0.2s;
+}
+.explore-button:hover{
+    background-color: rgb(11, 98, 220);
+    color: white; 
 }
 
 .footer-container{
