--- a/style.css
+++ b/style.css
@@ -146,14 +146,17 @@ p{
     height: 400px;
     text-align: center;
     box-shadow:  0 0.5em 1.5em rgba(0, 0, 0, .1),  0 0.125em 0.5em rgba(0, 0, 0, .15);
+    transition: width 0.2s;
+}
 
+.card:hover{
+    width: 85%;
 }
 
 .card-title{
-    padding: 15px;
+    padding: 15px 10px;
     font-size: 18px;
     margin: 0;
-    
 }
 
 .card-img{
@@ -162,16 +165,15 @@ p{
     width: 90%;
     height: 35%;
     object-fit: cover;
-
+    border: 1px solid rgba(0, 0, 0, 0.175);
     box-shadow:  0 0.5em 1.5em rgba(0, 0, 0, .01),  0 0.125em 0.5em rgba(0, 0, 0, .055);
-
 }
 
 .card-info{
     padding: 15px;
     font-size: 15px;
     color: grey;
-    height: 130px;
+    height: 50%;
     overflow: hidden;
     width: 90%;
     max-width: 400px;
