--- a/style.css
+++ b/style.css
@@ -16,19 +16,48 @@ p{
     position: absolute;
     left: 3%;
     top: 25vw;
-    width: 30%;
+    width: 35%;
     color: white;
 }
 
 .landing-img-title-name{
-    font-size: 35px;
+    font-size: 4.4vw;
     font-weight: bold;
     margin: 0;
 }
 
 .landing-img-title-info{
-    font-size: 20px;
+    font-size: 2vw;
 }
+
+@media only screen and (max-width: 800px){
+    .landing-img-title-name{
+        font-size: 6vw;
+        font-weight: bold;
+        margin: 0;
+    }
+
+    .landing-img-title-info{
+        font-size: 3vw;
+    }
+}
+
+@media only screen and (max-width: 500px){
+    .landing-img-title-name{
+        font-size: 9vw;
+        font-weight: bold;
+        margin: 0;
+    }
+
+    .landing-img-title-info{
+        font-size: 4vw;
+    }
+}
+
+@media only screen and (max-width: 800px){
+
+}
+
 
 .bio-title{
     margin-top: 2rem;
@@ -136,7 +165,7 @@ p{
 
 /** Projects*/
 
-.project-cards-container{
+.feature-project-cards-container{
     background-color: rgba(11, 98, 220, 0.05);
     box-shadow: inset 0 0.5em 1.5em rgba(0, 0, 0, .1), inset 0 0.125em 0.5em rgba(0, 0, 0, .15);
     overflow: hidden;
@@ -212,6 +241,12 @@ p{
     position: absolute;
     width: 100%;
     bottom: 25px;
+}
+
+.project-cards-container{
+    background-color: rgba(11, 98, 220, 0.05);
+    box-shadow: inset 0 0.5em 1.5em rgba(0, 0, 0, .1), inset 0 0.125em 0.5em rgba(0, 0, 0, .15);
+    overflow: hidden;
 }
 
 .project-cards-sub-container{
