--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ p{
     margin: 0;
 }
 
+nav.navbar.navbar-expand-lg.bg-body-tertiary {
+    z-index: 1;
+}
+
 /** Home*/
 
 .landing-img{
@@ -18,6 +22,7 @@ p{
     top: 25vw;
     width: 35%;
     color: white;
+    
 }
 
 .landing-img-title-name{
@@ -197,7 +202,7 @@ p{
 
 .card{
     margin: 8%;
-    width: 90%;
+    width: 86%;
     height: 400px;
     text-align: center;
     box-shadow:  0 0.5em 1.5em rgba(0, 0, 0, .1),  0 0.125em 0.5em rgba(0, 0, 0, .15);
@@ -205,7 +210,7 @@ p{
 }
 
 .card:hover{
-    width: 92%;
+    width: 88%;
 }
 
 .card-title{
