--- a/style.css
+++ b/style.css
@@ -63,7 +63,6 @@ nav.navbar.navbar-expand-lg.bg-body-tertiary {
 
 }
 
-
 .bio-title{
     margin-top: 2rem;
     margin-bottom: 0.5rem;
@@ -72,12 +71,45 @@ nav.navbar.navbar-expand-lg.bg-body-tertiary {
 }
 
 .bio-text{
-    padding-bottom: 3rem;
+    padding-bottom: 1rem;
     text-align: center;
     font-size: 18px;
     width: 75%;
     max-width: 1000px;
     margin: auto;
+}
+
+.bio-link-container{
+    padding-bottom: 2.5rem;
+    text-align: center;
+    font-size: 18px;
+    margin: auto;
+}
+
+#bio-email{
+    color: black;
+    font-size: 14px;
+    padding: .5rem;
+}
+
+.bio-text-link{
+    color: black;
+    font-size: 14px;
+    margin: 0;
+    padding: .5rem;
+    transition: color .2s;
+}
+
+.bio-text-link:link {
+    text-decoration: none;
+}
+
+.bio-text-link:visited {
+    text-decoration: none;
+}
+
+.bio-text-link:hover {
+    color: gray;
 }
 
 .video-container{
@@ -151,7 +183,7 @@ nav.navbar.navbar-expand-lg.bg-body-tertiary {
 
 .footer-text-link{
     color: black;
-    font-size: 14px;
+    font-size: 20px;
     margin: 0;
     transition: color .2s;
 }
