--- a/style.css
+++ b/style.css
@@ -80,10 +80,26 @@ nav.navbar.navbar-expand-lg.bg-body-tertiary {
 }
 
 .bio-link-container{
+    display: grid;
+    grid-template-columns: repeat(3, minmax(auto, 206px));
     padding-bottom: 2.5rem;
     text-align: center;
+    justify-content: center;
     font-size: 18px;
+    width: auto;
     margin: auto;
+}
+
+@media only screen and (max-width: 800px){
+    .bio-link-container{
+        display: grid;
+        grid-template-columns: repeat(1, minmax(auto, 1fr));
+        padding-bottom: 2.5rem;
+        text-align: center;
+        font-size: 18px;
+        width: 90%;
+        margin: auto;
+    }
 }
 
 #bio-email{
