--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ nav.navbar.navbar-expand-lg.bg-body-tertiary {
 }
 
 .bio-title{
-    margin-top: 2rem;
+    padding-top: 2rem;
     margin-bottom: 0.5rem;
     text-align: center;
     font-size: 35px;
@@ -132,9 +132,15 @@ nav.navbar.navbar-expand-lg.bg-body-tertiary {
     box-shadow: inset 0 0.5em 1.5em rgba(0, 0, 0, .1), inset 0 0.125em 0.5em rgba(0, 0, 0, .15);
 }
 
+.video-title{
+    padding: 1.5rem;
+    padding-bottom: 1rem;
+    text-align: center;
+    font-size: 35px;
+}
+
 .video{
-    padding: 3%;
-    padding-bottom: 0;
+    padding:0%;
     text-align: center;
 }
 
